--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
+    "path": "^0.12.7",
+    "sharp": "^0.31.3",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   }
 }
